# Examples731

Images/: clown.tif  text1.tif  text3.tif  text5.tif
Lecture10/calibration/src/: main.cpp
Lecture10/stereo/src/: main.cpp
Lecture11/halide/: CMakeLists.txt
Lecture11/halide/src/: CMakeLists.txt  halide_generator.cpp  main.cpp  menu.hpp
Lecture2/src/: main.cpp
Lecture3/: house.tif  pin1.tif  pin2.tif
Lecture3/src/: camera_with_fps.cpp
Lecture4/src/: camera_with_fps.cpp
Lecture5/HDR/: CMakeLists.txt
Lecture5/HDR/src/: main.cpp  menu.hpp
Lecture5/colour_segmentation/src/: camera_with_fps.cpp  menu.hpp
Lecture5/src/: main.cpp
Lecture6/dct/src/: main.cpp
Lecture7/optical_flow/src/: main.cpp
Lecture8/face_detect/src/: main.cpp  menu.hpp
Lecture8/semantic_segmentation/src/: main.cpp
Lecture9/fft/src/: main.cpp
